@@ -2,6 +2,7 @@
  * changed type of DEPEND, it must be a list now.
  * LIST in TARGET command is now of the list type.
  * allow use of lists in pmkscan data file.
+ * added code to set the language of a check in pmkscan.
 
 20 Aug 2003 mipsator
  * added hash_add_array_adv() in hash.
